fix: z-index 추가, image trasnsform시 header와 겹치는 문제 해결

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -6,6 +6,7 @@
   top: 0;
   height: 9em;
   background-color: var(--Linkbrary-bg);
+  z-index: 1;
 }
 
 .headings {
